why did i leave this stupid z-index bug for 5 years it's so embarrassing it was a 3 second change? ai ya

--- a/export/pghrtcss.css
+++ b/export/pghrtcss.css
@@ -150,6 +150,7 @@ a.ltx_LaTeXML_logo:visited {
 .ltx_TOC.show {
   width: 100vw;
   visibility: visible;
+  z-index: 2;
 }
 
 .ltx_border_tt, .ltx_border_t, .ltx_border_bb {
